# slow-mandelbulb-explorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.cu  camera.h  cudamain.h  main.cu  mandelbulb.cu  sphere.cu  sphere.h
include/: cudamain.h  global.h  mandelbulb.h  vec3d.h
src/: camera.cu  main.cu  mandelbulb.cu  vec3d.cu
